# git-commit-message-validator

./: CHANGELOG.md  CONTRIBUTING.md  README.md  commit-validator.yaml.example  install_hook.py  pyproject.toml  requirements.txt  setup.py
js/: script.js
